--- a/contatos.html
+++ b/contatos.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DelPhone</title>
 	<!-- CSS da página -->
-        <link href="front_end/style.css" rel="stylesheet">
+        <link href="{% templates 'delphone/front_end/style.css' %}" rel="stylesheet">
 	<!-- CSS do Bootstrap -->
-        <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-        <link rel="sortcut icon" href="img/logotipo.png">
-        <script src="jquery/jquery.min.js"></script>
-        <script src="jquery/popper.min.js"></script>
-        <script src="front_end/interaction.js"></script>
-        <script src="bootstrap/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="{% templates 'delphone/bootstrap/bootstrap.min.css' %}">
+        <link rel="sortcut icon" href="{% templates 'delphone/img/logotipo.png' %}">
+        <script src="{% static 'delphone/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
+        <script src="{% static 'delphone/front_end/interaction.js' %}"></script>
+        <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
     </head>
 
     <body class="bodycadastro">
@@ -21,34 +21,34 @@
         <div class="cabecalho">
             <div class="tiles">
               <div class="center">
-                <img alt="logotipo" src="img/DELPHONE.png">
-                <img alt="DelPhone" src="img/nome_sem_fundo.png"> 
+                <img alt="logotipo" src="{% static 'delphone/img/DELPHONE.png' %}">
+                <img alt="DelPhone" src="{% static 'delphone/img/nome_sem_fundo.png' %}"> 
 		<!-- Botão de Login -->
-                <a class="restrito" href="login.html"><img alt="cadeado" style="width: 40px" src="img/cadeado.svg"></a>             
+                <a class="restrito" href="{% templates 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src="{% static 'delphone/img/cadeado.svg"></a>             
               </div>
             </div>
 	    <!-- Barra de navegação -->
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="menu.html">MENU</a>
+                <a class="navbar-brand" href="{% templates 'delphone/menu.html' %}">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="como_funcionamos.html">COMO FUNCIONAMOS</a>
+                      <a class="nav-link" href="{% templates 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="faq.html">PERGUNTAS FREQUENTES</a>
+                      <a class="nav-link" href="{% templates 'delphone/faq.html' %}">PERGUNTAS FREQUENTES</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="sobre_nos.html">SOBRE NÓS</a>
+                      <a class="nav-link" href="{% templates 'delphone/sobre_nos.html' %}">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="contatos.html">CONTATOS</a>
+                      <a class="nav-link" href="{% templates 'delphone/contatos.html' %}">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a href="cadastro.html">CADASTRAR</a>
+                      <a href="{% templates 'delphone/cadastro.html' %}">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -60,8 +60,8 @@
 	<h1>Contatos</h1>
 	<br>
 	<!-- Símbolos e formas fictícias de contato -->
-	<p><img src="img/phone.png" height="25" width="25" alt="símbolo telefone"> +55 (11) 91234-5678</p>
-	<p><img src="img/email.png" height="25" width="25" alt="símbolo email"> contato@delphone.com.br</p>
+	<p><img src="{% static 'delphone/img/phone.png' %}" height="25" width="25" alt="símbolo telefone"> +55 (11) 91234-5678</p>
+	<p><img src="{% static 'delphone/img/email.png' %}" height="25" width="25" alt="símbolo email"> contato@delphone.com.br</p>
 		
         </div>
 
@@ -71,20 +71,20 @@
                 <div class="roda">
 		    <!-- Redes Sociais -->
                     <h2>Redes Sociais</h2>
-                    <img alt="Twitter" src="img/twiter.svg">
-                    <img alt="YouTube" src="img/youtube.svg">
-                    <img alt="Facebook" src="img/facebook.svg">
-                    <img alt="Instagram" src="img/instagram.svg">
+                    <img alt="Twitter" src="{% static 'delphone/img/twiter.svg' %}">
+                    <img alt="YouTube" src="{% static 'delphone/img/youtube.svg' %}">
+                    <img alt="Facebook" src="{% static 'delphone/img/facebook.svg' %}">
+                    <img alt="Instagram" src="{% static 'delphone/img/instagram.svg' %}">
                 </div>
                 <div class="roda">
 		    <!-- Navegação -->
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="menu.html">Menu</a><br>
-			<a href="como_funcionamos.html">Como funcionamos</a><br>
-                        <a href="faq.html">Perguntas frequentes</a><br>
-                        <a href="sobre_nos.html">Sobre nós</a><br>
-                        <a href="contatos.html">Contatos</a><br>
+                        <a href="{% templates 'delphone/menu.html' %}">Menu</a><br>
+			                  <a href="{% templates 'delphone/como_funcionamos.html' %}">Como funcionamos</a><br>
+                        <a href="{% templates 'delphone/faq.html' %}">Perguntas frequentes</a><br>
+                        <a href="{% templates 'delphone/sobre_nos.html' %}">Sobre nós</a><br>
+                        <a href="{% templates 'delphone/contatos.html' %}">Contatos</a><br>
                     </nav>
                 </div>
             </div>
